feat: блок header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 
 <body>
 	<div class="page">
-		<header class="header"></header>
+		<header class="header">
+			<img src="./images/header/logo.svg" alt="Логотип" class="header__logo">
+			<ul class="header__lang-links">
+				<li>the problem</li>
+				<li class="header__text-line">|</li>
+				<li>PiedPiperCoin</li>
+				<li class="header__text-line">|</li>
+				<li>the team</li>
+			</ul>
+		</header>
 		<main class="content"></main>
 	</div>
 </body>
