feat: сделать верстку блока lead

--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
 				<li>the team</li>
 			</ul>
 		</header>
-		<main class="content"></main>
+		<main class="content">
+			<section class="lead">
+				<img src="./images/lead/image.png" alt="lead" class="lead__img">
+				<h1 class="lead__title">PiperNet Is Here</h1>
+			</section>
+			<section class="intro">
+
+			</section>
+		</main>
 	</div>
 </body>
 
