feat: сделать верстку блока lead

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<img src="./images/lead/image.png" alt="lead" class="lead__img">
 				<h1 class="lead__title">PiperNet Is Here</h1>
 			</section>
-			<section class="intro">
+			<section class="problem">
 
 			</section>
 		</main>
