--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
 				<h1 class="lead__title">PiperNet Is Here</h1>
 			</section>
 			<section class="problem">
-
+				<h2 class="problem__title">The Problem</h2>
+				<p class="problem__text">
+					Beneath the flashy homepages of your favorite sites lurk Hooli™ and other evil corporations out to hoard and sell your most personal data.
+				</p>
+					<p class="problem__text">
+					What was built to be the ultimate platform for the free sharing of knowledge has turned into a money-hungry monster feasting on our privacy and freedom.
+				</p>
+					<p class="problem__text">
+					But fear not, for Pied Piper has the answer! And it’s simple:
+					An autonomous peer-to-peer network featuring distributed storage powered by universal compression, accelerated scheduling allocation, and end-to-end encryption.
+				</p>
+					<p class="problem__text">
+					Put even simpler — it’s the internet, completely decentralized.
+				</p>
 			</section>
 		</main>
 	</div>
