feat: сверстать блок lead-title

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 					Put even simpler — it’s the internet, completely decentralized.
 				</p>
 			</section>
+			<section class="lead-title">
+				<img src="./images/lead-title/lead-title.png" alt="Фон" class="lead-title__img">
+				<p class="lead-title__text">
+					We’re in this together! All of our computers and phones join in a network to make the strongest supercomputer the world has ever seen.
+				</p>
+			</section>
 		</main>
 	</div>
 </body>
