--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
 					We’re in this together! All of our computers and phones join in a network to make the strongest supercomputer the world has ever seen.
 				</p>
 			</section>
+			<section class="intro">
+				<h2 class="intro__title">Introducing PiedPiperCoin</h2>
+				<div class="intro__flex">
+					<img src="./images/intro__flex-img/PPC Logo.png" alt="Logo PPC" class="intro__flex-img">
+					<p class="intro__flex-text">
+						Pied Piper's new internet is built for users, by users.
+						<br>You supply the storage, compute, and networking resources that power our entire decentralized web.	
+					</p>
+				</div>
+				<p class="intro__text">
+					Now there's a way to give credit where credit is due. Compute credit, that is!
+					The more you share your device resources, the more PiedPiperCoin you receive.
+				</p>
+				<p class="intro__text">
+					Whether you're a developer with an app ready for market, or just an Average Joe with a smartphone you'll love all you can do with PiedPiperCoin.
+				</p>
+			</section>
 		</main>
 	</div>
 </body>
