feat: сверстать блок team

--- a/index.html
+++ b/index.html
@@ -65,6 +65,41 @@
 					Whether you're a developer with an app ready for market, or just an Average Joe with a smartphone you'll love all you can do with PiedPiperCoin.
 				</p>
 			</section>
+			<section class="team">
+				<h2 class="team__title">The Team</h2>
+				<ul class="cards">
+					<li class="cards__item">
+						<img src="./images/team/richard.png" alt="Richard Hendricks" class="cards__img">
+						<h3 class="cards__title">Richard Hendricks</h3>
+						<p class="cards__description">Founder & CEO</p>
+					 </li>
+					 <li class="cards__item">
+						<img src="./images/team/dinesh.png" alt="Dinesh Chugtai" class="cards__img">
+						<h3 class="cards__title">Dinesh Chugtai</h3>
+						<p class="cards__description">Senior Programmer</p>
+					 </li>
+					 <li class="cards__item">
+						<img src="./images/team/bertram.png" alt="Bertram Gilfoyle" class="cards__img">
+						<h3 class="cards__title">Bertram Gilfoyle</h3>
+						<p class="cards__description">Chief Systems Architect</p>
+					 </li>
+					 <li class="cards__item">
+						<img src="./images/team/jared.png" alt="Jared Dunn" class="cards__img">
+						<h3 class="cards__title">Jared Dunn</h3>
+						<p class="cards__description">Chief Operating Officer</p>
+					 </li>
+					 <li class="cards__item">
+						<img src="./images/team/monica.png" alt="Monica Hall" class="cards__img">
+						<h3 class="cards__title">Monica Hall</h3>
+						<p class="cards__description">Chief Financial Officer</p>
+					 </li>
+					 <li class="cards__item">
+						<img src="./images/team/nelson.png" alt="Nelson Bighetti" class="cards__img">
+						<h3 class="cards__title">Nelson Bighetti</h3>
+						<p class="cards__description">Majority Investor</p>
+					 </li>
+				</ul>
+			</section>
 		</main>
 	</div>
 </body>
