feat: сверстать блок footer

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 				</ul>
 			</section>
 		</main>
+		<footer class="footer">
+			<p class="footer__copyright">All other trademarks and copyrights are the property of their respective owners. Use of these names, trademarks and brands does not imply endorsement.</p>
+		</footer>
 	</div>
 </body>
 
